--- a/_includes/author-card.html
+++ b/_includes/author-card.html
@@ -15,7 +15,7 @@
     {% endcapture %}
     {% elsif author.image.provider == "local" and author.image.path %}
     {% capture avatar_image %}
-    {{ author.image.path }}
+    {{ author.image.path | relative_url }}
     {% endcapture %}
     {% endif %}
 
